<?xml version="1.0"?>
<package>
  <name>diyazen_gazebo</name>
  <version>0.0.0</version>
  <description>all the plugina and gazebo things of the diyazen robot</description>
  <maintainer email="venthan.thiru@gmail.com">thiru</maintainer>
  <license>TODO</license>
  <buildtool_depend>catkin</buildtool_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
  </export>
  
</package>
